1999-10-24  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	Add the prototype of a function to probe I/O ports used for a
	BIOS drive.
	
	* stage2/asm.S [DEFINE_TRACK_INT13] (track_int13): New function.
	[DEFINE_TRACK_INT13] (int1_handler): New interrupt handler for
	the real mode.
	[DEFINE_TRACK_INT13] (int3_handler): Likewise.
	[DEFINE_TRACK_INT13] (io_map): New variable.
	
	* stage2/builtins.c (quit_func) [!GRUB_UTIL]: Fix a typo.
	
1999-10-24  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	The new GRUB manual becomes official.
	
	* docs/grub.texi: Replaced with new-grub.texi.
	* docs/new-grub.texi: Removed.
	* docs/Makefile.am (grub_TEXINFOS): New variable.
	(UNFINISHED_MANUALS): Removed.
	(EXTRA_DIST): Deleted $(UNFINISHED_MANUALS).
	
1999-10-24  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/builtins.c (device_func) [!GRUB_UTIL]: Set ERRNUM to
	ERR_UNRECOGINIZED and return 1.
	(impsprobe_func) [GRUB_UTIL]: Likewise.
	(quit_func) [!GRUB_UTIL]: Likewise.
	* docs/tutorial.texi: Rename "Device Syntax" to "Filename".
	Added many cross-references.
	* docs/new-grub.texi: "Device Syntax" -> "Filename".
	* docs/user-ref.texi: Fix typos and added some cross-references.
	* docs/prog-ref.texi: Likewise.
	* docs/appendices.texi: Likewise.
	
1999-10-23  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/builtins.c (map_func): If BIOS_DRIVE_MAP already
	contains FROM, override the existsing entry.
	If TO is equal to FROM, delete the existing entry if any.
	(keycode_func): Likewise.
	* docs/user-ref.texi (Command): Use the list of `@deffn's
	instead of @table.
	(Basic usage): Use @option instead of @code.
	(Invoking mbchk): Likewise.
	
1999-10-23  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/asm.S [!STAGE1_5] (set_int15_handler): New function.
	[!STAGE1_5] (unset_int15_handler): Likewise.
	[!STAGE1_5] (int15_handler): New interrupt handler for the real
	mode.
	[!STAGE1_5] (int15_offset): New variable.
	[!STAGE1_5] (int15_segment): Likewise.